; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/ath/ath10k/extr_wmi-tlv.c_ath10k_wmi_mgmt_tx_alloc_msdu_id.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/ath/ath10k/extr_wmi-tlv.c_ath10k_wmi_mgmt_tx_alloc_msdu_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ath10k = type { i32, %struct.ath10k_wmi }
%struct.ath10k_wmi = type { i32, i32 }
%struct.sk_buff = type { i32 }
%struct.ath10k_mgmt_tx_pkt_addr = type { i32, %struct.sk_buff* }

@GFP_ATOMIC = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@ATH10K_DBG_WMI = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [34 x i8] c"wmi mgmt tx alloc msdu_id ret %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ath10k*, %struct.sk_buff*, i32)* @ath10k_wmi_mgmt_tx_alloc_msdu_id to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ath10k_wmi_mgmt_tx_alloc_msdu_id(%struct.ath10k* %0, %struct.sk_buff* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.ath10k*, align 8
  %6 = alloca %struct.sk_buff*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.ath10k_wmi*, align 8
  %9 = alloca %struct.ath10k_mgmt_tx_pkt_addr*, align 8
  %10 = alloca i32, align 4
  store %struct.ath10k* %0, %struct.ath10k** %5, align 8
  store %struct.sk_buff* %1, %struct.sk_buff** %6, align 8
  store i32 %2, i32* %7, align 4
  %11 = load %struct.ath10k*, %struct.ath10k** %5, align 8
  %12 = getelementptr inbounds %struct.ath10k, %struct.ath10k* %11, i32 0, i32 1
  store %struct.ath10k_wmi* %12, %struct.ath10k_wmi** %8, align 8
  %13 = load i32, i32* @GFP_ATOMIC, align 4
  %14 = call %struct.ath10k_mgmt_tx_pkt_addr* @kmalloc(i32 16, i32 %13)
  store %struct.ath10k_mgmt_tx_pkt_addr* %14, %struct.ath10k_mgmt_tx_pkt_addr** %9, align 8
  %15 = load %struct.ath10k_mgmt_tx_pkt_addr*, %struct.ath10k_mgmt_tx_pkt_addr** %9, align 8
  %16 = icmp ne %struct.ath10k_mgmt_tx_pkt_addr* %15, null
  br i1 %16, label %20, label %17

17:                                               ; preds = %3
  %18 = load i32, i32* @ENOMEM, align 4
  %19 = sub nsw i32 0, %18
  store i32 %19, i32* %4, align 4
  br label %46

20:                                               ; preds = %3
  %21 = load %struct.sk_buff*, %struct.sk_buff** %6, align 8
  %22 = load %struct.ath10k_mgmt_tx_pkt_addr*, %struct.ath10k_mgmt_tx_pkt_addr** %9, align 8
  %23 = getelementptr inbounds %struct.ath10k_mgmt_tx_pkt_addr, %struct.ath10k_mgmt_tx_pkt_addr* %22, i32 0, i32 1
  store %struct.sk_buff* %21, %struct.sk_buff** %23, align 8
  %24 = load i32, i32* %7, align 4
  %25 = load %struct.ath10k_mgmt_tx_pkt_addr*, %struct.ath10k_mgmt_tx_pkt_addr** %9, align 8
  %26 = getelementptr inbounds %struct.ath10k_mgmt_tx_pkt_addr, %struct.ath10k_mgmt_tx_pkt_addr* %25, i32 0, i32 0
  store i32 %24, i32* %26, align 8
  %27 = load %struct.ath10k*, %struct.ath10k** %5, align 8
  %28 = getelementptr inbounds %struct.ath10k, %struct.ath10k* %27, i32 0, i32 0
  %29 = call i32 @spin_lock_bh(i32* %28)
  %30 = load %struct.ath10k_wmi*, %struct.ath10k_wmi** %8, align 8
  %31 = getelementptr inbounds %struct.ath10k_wmi, %struct.ath10k_wmi* %30, i32 0, i32 1
  %32 = load %struct.ath10k_mgmt_tx_pkt_addr*, %struct.ath10k_mgmt_tx_pkt_addr** %9, align 8
  %33 = load %struct.ath10k_wmi*, %struct.ath10k_wmi** %8, align 8
  %34 = getelementptr inbounds %struct.ath10k_wmi, %struct.ath10k_wmi* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 4
  %36 = load i32, i32* @GFP_ATOMIC, align 4
  %37 = call i32 @idr_alloc(i32* %31, %struct.ath10k_mgmt_tx_pkt_addr* %32, i32 0, i32 %35, i32 %36)
  store i32 %37, i32* %10, align 4
  %38 = load %struct.ath10k*, %struct.ath10k** %5, align 8
  %39 = getelementptr inbounds %struct.ath10k, %struct.ath10k* %38, i32 0, i32 0
  %40 = call i32 @spin_unlock_bh(i32* %39)
  %41 = load %struct.ath10k*, %struct.ath10k** %5, align 8
  %42 = load i32, i32* @ATH10K_DBG_WMI, align 4
  %43 = load i32, i32* %10, align 4
  %44 = call i32 @ath10k_dbg(%struct.ath10k* %41, i32 %42, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0), i32 %43)
  %45 = load i32, i32* %10, align 4
  store i32 %45, i32* %4, align 4
  br label %46

46:                                               ; preds = %20, %17
  %47 = load i32, i32* %4, align 4
  ret i32 %47
}

declare dso_local %struct.ath10k_mgmt_tx_pkt_addr* @kmalloc(i32, i32) #1

declare dso_local i32 @spin_lock_bh(i32*) #1

declare dso_local i32 @idr_alloc(i32*, %struct.ath10k_mgmt_tx_pkt_addr*, i32, i32, i32) #1

declare dso_local i32 @spin_unlock_bh(i32*) #1

declare dso_local i32 @ath10k_dbg(%struct.ath10k*, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
